# gcp-log-csp

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
alerts/: alert-policy-csp-by-referrer.yaml  log-metric-csp-by-referrer.yaml
sample_alerts/: alert-policy-csp-by-referrer.yaml  log-metric-csp-by-referrer.yaml
src/: main.rs
