[package]
name = "gcp-log-csp"
version = "0.1.0"
edition = "2021"
description = "A minimal CSP report collector that logs violations as GCP structured logs"
license = "MIT"

[dependencies]
axum = "0.8"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
